src/ui/snapshots/gpr__ui__dashboard__tests__renders_empty_buckets.snap
---
source: src/ui/dashboard.rs
expression: terminal.backend()
---
"╭ Review requested (0) ────────────────────────────────────────────────────────╮"
"│             # Title                              Author              +      −│"
"│   Nothing waiting for review                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Authored (0) ────────────────────────────────────────────────────────────────╮"
"│             # Title                              Author              +      −│"
"│   Nothing authored is open                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Assigned (0) ────────────────────────────────────────────────────────────────╮"
"│             # Title                              Author              +      −│"
"│   Nothing assigned to you                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
