src/ui/snapshots/gpr__ui__dashboard__tests__renders_focused_middle_panel.snap
---
source: src/ui/dashboard.rs
expression: terminal.backend()
---
"╭ Review requested (1) ────────────────────────────────────────────────────────╮"
"│             # Title                              Author              +      −│"
"│  ✓ ·       #1 fix: foo                           octocat           +10     -2│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Authored (1) ────────────────────────────────────────────────────────────────╮"
"│             # Title                              Author              +      −│"
"│  ✓ ·       #2 feat: bar                          octocat           +10     -2│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Assigned (1) ────────────────────────────────────────────────────────────────╮"
"│             # Title                              Author              +      −│"
"│  ✓ ·       #3 chore: baz                         octocat           +10     -2│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
