src/ui/snapshots/gpr__ui__dashboard__tests__renders_loading_state.snap
---
source: src/ui/dashboard.rs
expression: terminal.backend()
---
"╭ Dashboard ───────────────────────────────────────────────────────────────────╮"
"│                              Loading dashboard…                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
